--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
   <meta charset="utf-8">
   <title>Uttarakhand Reform Party (URP) — Official Website</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta name="description" content="URP is a mountain-first reform movement focused on transparent governance, youth empowerment, women safety and rural livelihoods in Uttarakhand.">
+  <meta name="description" content="URP पहाड़-केंद्रित विकास, पारदर्शी शासन, युवाओं के रोज़गार, महिलाओं की सुरक्षा और ग्रामीण आजीविका पर ध्यान देने वाला सुधारवादी राजनीतिक मंच है।">
 
-  <!-- PURE INLINE CSS: कोई external file की ज़रूरत नहीं -->
   <style>
     :root{
       --primary:#0a3d62;
@@ -49,7 +48,6 @@
       align-items:center;
       gap:10px;
     }
-    /* image logo */
     .logo-img{
       width:44px;
       height:44px;
@@ -151,6 +149,15 @@
       color:var(--primary-soft);
       background:#fff;
     }
+    .hero-meta{
+      display:flex;
+      flex-wrap:wrap;
+      gap:18px;
+      margin-top:16px;
+      font-size:12px;
+      color:var(--muted);
+    }
+    .hero-meta strong{color:#111827}
 
     .hero-side{
       flex:1 1 260px;
@@ -322,7 +329,6 @@
   <header class="header">
     <div class="container nav">
       <div class="logo-wrap">
-        <!-- final Kailash logo -->
         <img src="logo%20urp.png" alt="URP logo" class="logo-img">
         <div class="brand-title">Uttarakhand Reform Party</div>
       </div>
@@ -346,25 +352,30 @@
           <h1 class="hero-title">बदलाव भी, ज़िम्मेदारी भी — एक नया उत्तराखंड</h1>
           <p class="hero-sub">
             25 साल में सरकारें बदलीं, पर सिस्टम नहीं। URP का लक्ष्य है पारदर्शी शासन, पहाड़-केंद्रित विकास
-            और युवा-नेतृत्व वाला बदलाव।
+            और युवा-नेतृत्व वाला साफ़ बदलाव।
           </p>
 
           <div class="badge-row">
-            <div class="badge">Mountain-first development</div>
-            <div class="badge">Transparent governance</div>
-            <div class="badge">Youth & Women empowerment</div>
+            <div class="badge">पहाड़-केंद्रित विकास</div>
+            <div class="badge">पारदर्शी शासन</div>
+            <div class="badge">युवा और महिला सशक्तिकरण</div>
           </div>
 
           <div class="cta-row">
             <a href="join.html" class="btn-primary">URP से जुड़ें</a>
             <a href="vision.html" class="btn-ghost">हमारा विज़न देखें</a>
           </div>
+
+          <div class="hero-meta">
+            <div><strong>70</strong> विधानसभा सीटों पर संगठन की तैयारी</div>
+            <div><strong>45–50</strong> सीटों को जीत के लिए प्राथमिक लक्ष्य बनाने की रणनीति</div>
+          </div>
         </div>
 
         <div class="hero-side">
           <div class="hero-card">
             <h3>100-दिन का सुधार कार्यक्रम</h3>
-            <p>पहले 100 दिनों में ऐसा काम जो कागज़ पर नहीं, जनता की नज़र में साफ़ दिखाई दे।</p>
+            <p>पहले 100 दिनों में ऐसा काम जो कागज़ पर नहीं, लोगों की नज़रों में साफ़ दिखे — नापे जा सकने वाले परिणाम।</p>
             <div class="hero-kpi">
               <div class="hero-kpi-item">
                 <span>100+</span>
@@ -386,42 +397,42 @@
         <div class="section-header">
           <h2>URP के 6 मुख्य आधार</h2>
           <p>
-            URP केवल नारों से नहीं, स्पष्ट और मज़बूत आधारों पर चलता है। 
-            हर आधार के लिए ठोस और मापनीय वादे होंगे, जिनकी सार्वजनिक निगरानी होगी।
+            URP केवल नारों से नहीं, स्पष्ट और मज़बूत आधारों पर चलता है। हर आधार के लिए ठोस और मापनीय वादे होंगे,
+            जिनकी सार्वजनिक निगरानी होगी।
           </p>
         </div>
         <div class="grid">
           <div class="card">
             <h3>1. पारदर्शी शासन</h3>
-            <p>हर काम का फोटो, geo-tag, खर्च और समयसीमा — सब एक सार्वजनिक online dashboard पर।</p>
+            <p>हर काम की तस्वीर, स्थान-चिह्न, खर्च और समय-सीमा — सब एक सार्वजनिक ऑनलाइन डैशबोर्ड पर।</p>
             <div class="tag-row">
-              <div class="tag">Online tracking</div>
-              <div class="tag">Citizen audit</div>
+              <div class="tag">ऑनलाइन ट्रैकिंग</div>
+              <div class="tag">जनता ऑडिट</div>
             </div>
           </div>
           <div class="card">
             <h3>2. पहाड़-केंद्रित नीति</h3>
-            <p>सिर्फ़ मैदानी नहीं — hill blocks के लिए अलग योजना, अलग बजट और प्राथमिकता।</p>
+            <p>सिर्फ़ मैदानी नहीं — पहाड़ी क्षेत्रों के लिए अलग योजना, अलग बजट और सर्वोच्च प्राथमिकता।</p>
             <div class="tag-row">
-              <div class="tag">Anti-migration</div>
-              <div class="tag">Village clusters</div>
+              <div class="tag">पलायन रोकने पर फ़ोकस</div>
+              <div class="tag">गाँव क्लस्टर मॉडल</div>
             </div>
           </div>
           <div class="card">
             <h3>3. युवा सशक्तिकरण</h3>
-            <p>Skill hubs, local job mapping, startup support — “10 km radius में रोज़गार” मॉडल।</p>
+            <p>स्किल सेंटर, स्थानीय रोज़गार मानचित्र और स्टार्टअप सहयोग — “10 किमी दायरे में रोज़गार” मॉडल।</p>
           </div>
           <div class="card">
             <h3>4. महिला सुरक्षा व सम्मान</h3>
-            <p>मार्केट, स्कूल, बस-स्टैंड: lighting, CCTV, help-desk और तेज़ response system।</p>
+            <p>मार्केट, स्कूल, बस-स्टैंड: बेहतर रोशनी, CCTV, हेल्प-डेस्क और तेज़ प्रतिक्रिया प्रणाली।</p>
           </div>
           <div class="card">
             <h3>5. ग्रामीण आजीविका</h3>
-            <p>Tourism, horticulture, herbal clusters — गाँव से ही रोज़गार, पलायन मजबूरी नहीं।</p>
+            <p>पर्यटन, बागवानी, जड़ी-बूटी समूह — रोज़गार गाँव से ही, पलायन मजबूरी नहीं।</p>
           </div>
           <div class="card">
             <h3>6. स्वच्छ राजनीति</h3>
-            <p>Ticket “connection” से नहीं, साफ़ criteria से — serious criminal background वालों को जगह नहीं।</p>
+            <p>टिकट “सिफ़ारिश” से नहीं, साफ़ मानदंड से — गंभीर आपराधिक पृष्ठभूमि वालों को जगह नहीं।</p>
           </div>
         </div>
       </div>
@@ -436,12 +447,12 @@
           </div>
           <p class="small" style="margin-bottom:10px;">
             BJP और Congress दोनों ने उत्तराखंड पर शासन किया, लेकिन आज भी पलायन, बेरोज़गारी, स्वास्थ्य और शिक्षा के
-            मुद्दे वहीं हैं। URP मानता है — “पुरानी राजनीति से नया भविष्य नहीं बन सकता”।
+            मुद्दे वहीं हैं। URP मानता है — “पुरानी राजनीति से नया भविष्य नहीं बन सकता।”
           </p>
           <ul class="timeline">
-            <li>20+ साल के report card का ईमानदार review — केवल सीट गणित नहीं, काम का हिसाब।</li>
-            <li>UKD जैसी क्षेत्रीय भावना को modern, professional रूप में मज़बूत करना — विरोध नहीं, सहयोग।</li>
-            <li>Decision-making में youth, women और professionals को पहली line में लाना।</li>
+            <li>20+ साल के काम-काज का ईमानदार रिपोर्ट-कार्ड — सिर्फ़ सीट गणित नहीं, काम का हिसाब।</li>
+            <li>UKD जैसी क्षेत्रीय भावना को modern, professional ढाँचे के साथ मज़बूत करना — विरोध नहीं, सहयोग।</li>
+            <li>निर्णय-प्रक्रिया में youth, women और professionals को पहली लाइन में लाना।</li>
           </ul>
         </div>
         <div>
@@ -450,22 +461,22 @@
           </div>
           <div class="stats-row">
             <div class="stat">
-              <span>Seats focus</span>
+              <span>फ़ोकस सीटें</span>
               <strong>50</strong>
             </div>
             <div class="stat">
-              <span>Core volunteers</span>
+              <span>कोर स्वयंसेवक</span>
               <strong>10,000+</strong>
             </div>
             <div class="stat">
-              <span>District teams</span>
+              <span>ज़िला टीमें</span>
               <strong>13</strong>
             </div>
           </div>
           <ul class="timeline" style="margin-top:10px;">
             <li>Phase 1: सदस्यता, volunteer network, digital presence।</li>
             <li>Phase 2: seat-wise survey, micro-issues mapping, candidate shortlisting।</li>
-            <li>Phase 3: public manifesto, booth-level संरचना और संसाधन planning।</li>
+            <li>Phase 3: public manifesto, बूथ-स्तर संरचना और संसाधन planning।</li>
           </ul>
         </div>
       </div>
@@ -476,24 +487,24 @@
       <div class="container">
         <div class="section-header">
           <h2>तुरंत कैसे जुड़ें?</h2>
-          <p>URP में joining process साफ़, digital और transparent है — कोई hidden membership या closed circle नहीं।</p>
+          <p>URP में जुड़ने की प्रक्रिया साफ़, digital और पारदर्शी है — कोई hidden membership या बंद कमरों वाली politics नहीं।</p>
         </div>
         <div class="grid">
           <div class="card">
-            <h4>1. Online Membership Form</h4>
-            <p>Join पेज पर Google Form भरें (नाम, mobile, EPIC, जिला)। Data सीधे secure Google Sheet में जाता है।</p>
+            <h4>1. ऑनलाइन सदस्यता फ़ॉर्म</h4>
+            <p>Join पेज पर Google Form भरें (नाम, mobile, EPIC, ज़िला)। Data सीधे सुरक्षित Google Sheet में जाता है।</p>
           </div>
           <div class="card">
-            <h4>2. Verification & Role</h4>
-            <p>District coordinator WhatsApp / call से संपर्क कर आपकी भूमिका और availability समझेगा।</p>
+            <h4>2. Verification व भूमिका</h4>
+            <p>District coordinator WhatsApp / कॉल से संपर्क कर आपकी भूमिका और उपलब्धता समझेगा।</p>
           </div>
           <div class="card">
-            <h4>3. Local Team में शामिल</h4>
-            <p>आपको आपके विधानसभा क्षेत्र की ground टीम में जोड़ा जाएगा — booth, ward या गाँव स्तर पर।</p>
+            <h4>3. लोकल टीम में शामिल</h4>
+            <p>आपको आपके विधानसभा क्षेत्र की ground टीम में जोड़ा जाएगा — बूथ, वार्ड या गाँव स्तर पर।</p>
           </div>
           <div class="card">
-            <h4>4. Candidate Track (Optional)</h4>
-            <p>जो लोग चुनाव लड़ना चाहते हैं, उनके लिए अतिरिक्त eligibility, survey और public feedback process होगा।</p>
+            <h4>4. Candidate Track (विकल्प)</h4>
+            <p>जो लोग चुनाव लड़ना चाहते हैं, उनके लिए अतिरिक्त eligibility, survey और public feedback प्रक्रिया होगी।</p>
           </div>
         </div>
         <p class="small" style="margin-top:10px;">
