--- a/index.html
+++ b/index.html
@@ -333,12 +333,12 @@
         <div class="brand-title">Uttarakhand Reform Party</div>
       </div>
       <nav class="navlinks">
-        <a href="index.html" class="active">होम</a>
-        <a href="about.html">हमारे बारे में</a>
-        <a href="vision.html">विजन</a>
-        <a href="join.html">जुड़ें</a>
-        <a href="candidates.html">उम्मीदवार</a>
-        <a href="contact.html">संपर्क</a>
+        <a href="index.html" class="active">Home</a>
+        <a href="about.html">About</a>
+        <a href="vision.html">Vision</a>
+        <a href="join.html">Join</a>
+        <a href="candidates.html">Candidates</a>
+        <a href="contact.html">Contact</a>
       </nav>
     </div>
   </header>
@@ -348,7 +348,7 @@
     <section class="hero">
       <div class="container hero-grid">
         <div class="hero-main">
-          <div class="hero-kicker">उत्तराखंड रिफॉर्म पार्टी • URP</div>
+          <div class="hero-kicker">उत्तराखंड रिफ़ॉर्म पार्टी • URP</div>
           <h1 class="hero-title">बदलाव भी, ज़िम्मेदारी भी — एक नया उत्तराखंड</h1>
           <p class="hero-sub">
             25 साल में सरकारें बदलीं, पर सिस्टम नहीं। URP का लक्ष्य है पारदर्शी शासन, पहाड़-केंद्रित विकास
@@ -366,9 +366,10 @@
             <a href="vision.html" class="btn-ghost">हमारा विज़न देखें</a>
           </div>
 
+          <!-- ⬇️ यहां से strategic numbers हटा कर generic public lines रखी गई हैं -->
           <div class="hero-meta">
-            <div><strong>70</strong> विधानसभा सीटों पर संगठन की तैयारी</div>
-            <div><strong>45–50</strong> सीटों को जीत के लिए प्राथमिक लक्ष्य बनाने की रणनीति</div>
+            <div>पूरे उत्तराखंड में मज़बूत, अनुशासित और जवाबदेह संगठन बनाने की शुरुआत।</div>
+            <div>काम, ईमानदारी और जनभागीदारी पर आधारित नई राजनीतिक संस्कृति की पहल।</div>
           </div>
         </div>
 
@@ -420,7 +421,7 @@
           </div>
           <div class="card">
             <h3>3. युवा सशक्तिकरण</h3>
-            <p>स्किल केन्द्र, स्थानीय रोज़गार मानचित्र और स्टार्टअप सहयोग — “10 किमी दायरे में रोज़गार” मॉडल।</p>
+            <p>स्किल सेंटर, स्थानीय रोज़गार मानचित्र और स्टार्टअप सहयोग — “10 किमी दायरे में रोज़गार” मॉडल।</p>
           </div>
           <div class="card">
             <h3>4. महिला सुरक्षा व सम्मान</h3>
@@ -438,7 +439,7 @@
       </div>
     </section>
 
-    <!-- WHY NEW PARTY / TARGET 2027 -->
+    <!-- WHY NEW PARTY / LONG-TERM PREP -->
     <section class="section">
       <div class="container two-col">
         <div>
@@ -450,33 +451,23 @@
             मुद्दे वहीं हैं। URP मानता है — “पुरानी राजनीति से नया भविष्य नहीं बन सकता।”
           </p>
           <ul class="timeline">
-            <li>20+ साल के काम-काज का ईमानदार रिपोर्ट-कार्ड — सिर्फ़ सीट गणित नहीं, काम का हिसाब।</li>
-            <li>UKD जैसी क्षेत्रीय भावना को आधुनिक और पेशेवर ढाँचे के साथ मज़बूत करना — विरोध नहीं, सहयोग।</li>
-            <li>निर्णय-प्रक्रिया में युवा, महिला और पेशेवर वर्ग को पहली पंक्ति में लाना।</li>
+            <li>पिछले दो दशकों के काम-काज का ईमानदार रिपोर्ट-कार्ड — सिर्फ़ सीट गणित नहीं, काम का हिसाब।</li>
+            <li>UKD जैसी क्षेत्रीय भावना को आधुनिक, पेशेवर ढाँचे के साथ मज़बूत करना — विरोध नहीं, सहयोग।</li>
+            <li>निर्णय-प्रक्रिया में youth, women और professionals को पहली लाइन में लाना।</li>
           </ul>
         </div>
         <div>
           <div class="section-header">
-            <h2>लक्ष्य 2027 — तैयारी अभी से</h2>
+            <!-- ⬇️ यहां से “Target 2027 / numbers” हटाकर generic heading रखी है -->
+            <h2>लंबी अवधि की तैयारी</h2>
           </div>
-          <div class="stats-row">
-            <div class="stat">
-              <span>फ़ोकस सीटें</span>
-              <strong>50</strong>
-            </div>
-            <div class="stat">
-              <span>कोर स्वयंसेवक</span>
-              <strong>10,000+</strong>
-            </div>
-            <div class="stat">
-              <span>ज़िला टीमें</span>
-              <strong>13</strong>
-            </div>
-          </div>
+
+          <!-- ⬇️ stats-row (50 seats / 10,000+ volunteers / 13 teams) पूरा हटा दिया गया है -->
+
           <ul class="timeline" style="margin-top:10px;">
-            <li>चरण 1: सदस्यता, स्वयंसेवक नेटवर्क, डिजिटल पहुँच मजबूत करना।</li>
-            <li>चरण 2: प्रत्येक सीट पर सर्वे, स्थानीय मुद्दों की मैपिंग, संभावित उम्मीदवारों की सूची।</li>
-            <li>चरण 3: सार्वजनिक घोषणा-पत्र, बूथ स्तर तक संगठन और संसाधनों की योजना।</li>
+            <li>Phase 1: सदस्यता, volunteer network और digital presence को मज़बूत करना।</li>
+            <li>Phase 2: seat-wise survey, स्थानीय मुद्दों की mapping और संभावित उम्मीदवारों की पहचान।</li>
+            <li>Phase 3: सार्वजनिक जन-संपर्क, manifesto और बूथ-स्तर पर मज़बूत संगठन तैयार करना।</li>
           </ul>
         </div>
       </div>
@@ -487,28 +478,28 @@
       <div class="container">
         <div class="section-header">
           <h2>तुरंत कैसे जुड़ें?</h2>
-          <p>URP में जुड़ने की प्रक्रिया साफ़, डिजिटल और पारदर्शी है — कोई छुपी हुई सदस्यता या बंद कमरों वाली राजनीति नहीं।</p>
+          <p>URP में जुड़ने की प्रक्रिया साफ़, digital और पारदर्शी है — कोई hidden membership या बंद कमरों वाली politics नहीं।</p>
         </div>
         <div class="grid">
           <div class="card">
             <h4>1. ऑनलाइन सदस्यता फ़ॉर्म</h4>
-            <p>जुड़ें पेज पर Google Form भरें (नाम, मोबाइल, EPIC, ज़िला)।</p>
+            <p>Join पेज पर Google Form भरें (नाम, mobile, EPIC, ज़िला)। Data सीधे सुरक्षित Google Sheet में जाता है।</p>
           </div>
           <div class="card">
-            <h4>2. सत्यापन व भूमिका</h4>
-            <p>ज़िला संयोजक WhatsApp / कॉल के ज़रिए आपसे संपर्क कर आपकी भूमिका और उपलब्धता समझेगा।</p>
+            <h4>2. Verification व भूमिका</h4>
+            <p>District coordinator WhatsApp / कॉल से संपर्क कर आपकी भूमिका और उपलब्धता समझेगा।</p>
           </div>
           <div class="card">
-            <h4>3. स्थानीय टीम में शामिल</h4>
-            <p>आपको आपके विधानसभा क्षेत्र की मैदानी टीम में जोड़ा जाएगा — बूथ, वार्ड या गाँव स्तर पर।</p>
+            <h4>3. लोकल टीम में शामिल</h4>
+            <p>आपको आपके विधानसभा क्षेत्र की ground टीम में जोड़ा जाएगा — बूथ, वार्ड या गाँव स्तर पर।</p>
           </div>
           <div class="card">
-            <h4>4. उम्मीदवार मार्ग (विकल्प)</h4>
-            <p>जो लोग भविष्य में चुनाव लड़ना चाहते हैं, उनके लिए अतिरिक्त मानदंड, सर्वे और सार्वजनिक प्रतिक्रिया की प्रक्रिया होगी।</p>
+            <h4>4. Candidate Track (विकल्प)</h4>
+            <p>जो लोग चुनाव लड़ना चाहते हैं, उनके लिए अतिरिक्त eligibility, survey और public feedback प्रक्रिया होगी।</p>
           </div>
         </div>
         <p class="small" style="margin-top:10px;">
-          तैयार हैं ज़िम्मेदारी लेने के लिए? <a href="join.html" style="color:var(--primary-soft);font-weight:600;">जुड़ें पेज</a> पर जाएँ और फ़ॉर्म भरें।
+          तैयार हैं ज़िम्मेदारी लेने के लिए? <a href="join.html" style="color:var(--primary-soft);font-weight:600;">Join पेज</a> पर जाएँ और form भरें।
         </p>
       </div>
     </section>
@@ -519,15 +510,15 @@
     <div class="container footer-grid">
       <div>
         <div>© 2025 Uttarakhand Reform Party</div>
-        <div class="small">उत्तराखंड के लिए सुधार-केंद्रित राजनीतिक मंच।</div>
+        <div class="small">Reform-focused political platform for Uttarakhand.</div>
       </div>
       <div class="small">
-        <div>ईमेल: contact@uttarakhandreform.org</div>
-        <div>फ़ोन: +91 98765 43210</div>
+        <div>Contact: contact@uttarakhandreform.org</div>
+        <div>Phone: +91 98765 43210</div>
       </div>
       <div class="small">
-        <div><a href="join.html">स्वयंसेवक / जुड़ें</a></div>
-        <div><a href="candidates.html">उम्मीदवार के रूप में आवेदन करें</a></div>
+        <div><a href="join.html">Volunteer / Join</a></div>
+        <div><a href="candidates.html">Apply as Candidate</a></div>
       </div>
     </div>
   </footer>
