--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>About URP — Uttarakhand Reform Party</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta name="description" content="About Uttarakhand Reform Party (URP) — a reform-driven, mountain-first political platform in Uttarakhand.">
+  <meta name="description" content="Uttarakhand Reform Party (URP) उत्तराखंड में सेवा, ईमानदारी और परिणाम-आधारित राजनीति को आगे बढ़ाने वाला एक सुधारवादी राजनीतिक मंच है।">
 
   <style>
     :root{
@@ -47,7 +47,6 @@
       align-items:center;
       gap:10px;
     }
-    /* ⬇️ नया image-logo class (पुराना .logo-mark हटा दिया गया) */
     .logo-img{
       width:44px;
       height:44px;
@@ -202,7 +201,6 @@
   <header class="header">
     <div class="container nav">
       <div class="logo-wrap">
-        <!-- ⬇️ यहां image logo लगा है -->
         <img src="logo%20urp.png" alt="URP logo" class="logo-img">
         <div class="brand-title">Uttarakhand Reform Party</div>
       </div>
@@ -221,12 +219,12 @@
     <!-- HERO -->
     <section class="hero">
       <div class="container">
-        <div class="hero-kicker">ABOUT • URP</div>
+        <div class="hero-kicker">परिचय • URP</div>
         <h1 class="hero-title">URP — सत्ता नहीं, सुधार की राजनीति</h1>
         <p class="hero-sub">
-          Uttarakhand Reform Party (URP) उन लोगों की collective आवाज़ है जो मानते हैं कि 
+          Uttarakhand Reform Party (URP) उन नागरिकों का मंच है जो मानते हैं कि 
           “पुरानी राजनीति से नया भविष्य नहीं बन सकता।”  
-          URP का उद्देश्य है कि उत्तराखंड में राजनीति फिर से <strong>सेवा, ईमानदारी और परिणाम</strong> पर वापस आए।
+          URP का उद्देश्य है कि उत्तराखंड में राजनीति फिर से <strong>सेवा, ईमानदारी और नतीजा देने वाले काम</strong> पर केंद्रित हो।
         </p>
       </div>
     </section>
@@ -239,35 +237,36 @@
             <h2>हमारी कहानी</h2>
           </div>
           <p class="small" style="margin-bottom:10px;">
-            पिछले दो दशकों में उत्तराखंड ने बार-बार सरकार बदलते देखी, पर सामान्य नागरिक की समस्याएँ
-            — पलायन, बेरोज़गारी, स्वास्थ्य, शिक्षा — ज्यों की त्यों रहीं।  
-            URP ऐसे लोगों की टीम से बना है जो सिर्फ़ शिकायत नहीं, <strong>solution-oriented राजनीति</strong> चाहते हैं।
+            पिछले दो दशकों में उत्तराखंड ने कई बार सरकारें बदलते देखीं, लेकिन आम नागरिक की मुख्य समस्याएँ  
+            — पलायन, बेरोज़गारी, स्वास्थ्य और शिक्षा — आज भी पूरी तरह हल नहीं हो पाईं।  
+            URP ऐसे लोगों की टीम से बना है जो केवल शिकायत नहीं, बल्कि <strong>समाधान-आधारित राजनीति</strong> चाहते हैं।
           </p>
           <ul class="timeline">
-            <li>शुरुआत youth, भूतपूर्व सैनिक, professionals और सामाजिक कार्यकर्ताओं की informal बैठकों से।</li>
-            <li>चुनावी गणित से पहले data, surveys और ground feedback पर focus।</li>
-            <li>UKD जैसी क्षेत्रीय भावना को modern, professional रूप में strengthen करने की सोच — oppose नहीं, साथ लेकर चलना।</li>
+            <li>शुरुआत युवाओं, भूतपूर्व सैनिकों, पेशेवरों और सामाजिक कार्यकर्ताओं की अनौपचारिक बैठकों से हुई।</li>
+            <li>चुनावी गणित से पहले ज़मीन की हकीकत, आँकड़ों, सर्वे और सीधे जनता के feedback पर ध्यान।</li>
+            <li>UKD जैसी क्षेत्रीय भावनाओं को आधुनिक और पेशेवर तरीके से मज़बूत करने की सोच — टकराव नहीं, साथ लेकर चलने का प्रयास।</li>
           </ul>
         </div>
 
         <div>
           <div class="card">
-            <h3>मूल सिद्धांत (Core Principle)</h3>
+            <h3>मूल सिद्धांत</h3>
             <p class="small">
-              हमारा simple test — <strong>“सत्ता बने या न बने, क्या यह कदम सुधार लाएगा?”</strong>  
-              हर policy, हर बयान और हर alliance इस test पर परखा जाएगा।
+              हमारा सरल प्रश्न है — <strong>“सत्ता मिले या न मिले, क्या यह कदम राज्य के लिए वास्तविक सुधार लाएगा?”</strong>  
+              हर नीति, हर सार्वजनिक बयान और हर समझौते को इसी कसौटी पर परखा जाएगा।
             </p>
             <div class="tag-row">
-              <div class="tag">Reform first</div>
-              <div class="tag">Evidence-based policy</div>
-              <div class="tag">Mountain-first lens</div>
+              <div class="tag">सुधार पहले</div>
+              <div class="tag">तथ्य-आधारित नीति</div>
+              <div class="tag">पहाड़-प्रथम दृष्टि</div>
             </div>
           </div>
           <div class="card" style="margin-top:12px;">
             <h4>हमारा वादा</h4>
             <p class="small">
-              URP किसी एक नेता का personal project नहीं, बल्कि ऐसी टीम का मंच है जो अपने नाम से ज़्यादा
-              <strong>सिस्टम बदलने की credibility</strong> पर भरोसा रखती है।
+              URP किसी एक व्यक्ति की निजी पार्टी नहीं, बल्कि ऐसी टीम का मंच है जो अपने नाम या पद से ज़्यादा  
+              <strong>सिस्टम बदलने की साख</strong> पर भरोसा रखती है।  
+              लक्ष्य है कि राजनीति फिर से समाज-सेवा और जवाबदेही का माध्यम बने।
             </p>
           </div>
         </div>
@@ -279,30 +278,30 @@
       <div class="container two-col">
         <div>
           <div class="section-header">
-            <h2>Core Values (मूल मूल्य)</h2>
-            <p>URP के भीतर काम करने वाले हर व्यक्ति से इन चार मूल्यों पर commitment ली जाएगी।</p>
+            <h2>मूल मूल्य</h2>
+            <p>URP के साथ काम करने वाले हर व्यक्ति से इन मूल मूल्यों पर स्पष्ट प्रतिबद्धता ली जाएगी।</p>
           </div>
           <div class="card">
             <ul class="timeline">
-              <li><strong>ईमानदारी और पारदर्शिता</strong> — निजी जीवन और सार्वजनिक निर्णय, दोनों में।</li>
-              <li><strong>स्थानीय सम्मान</strong> — पहाड़, मैदान, शहर, गाँव; हर क्षेत्र की voice को बराबर महत्व।</li>
-              <li><strong>युवा और महिला नेतृत्व</strong> — front row में youth और women, सिर्फ़ मंच सजाने के लिए नहीं।</li>
-              <li><strong>समाधान की राजनीति</strong> — हर criticism के साथ ठोस विकल्प और road-map।</li>
+              <li><strong>ईमानदारी और पारदर्शिता</strong> — निजी जीवन और सार्वजनिक निर्णय, दोनों में साफ़ चरित्र और खुलापन।</li>
+              <li><strong>स्थानीय सम्मान</strong> — पहाड़, मैदान, शहर और गाँव; हर क्षेत्र और हर समुदाय की आवाज़ को बराबर महत्व।</li>
+              <li><strong>युवा और महिला नेतृत्व</strong> — केवल मंच सजाने के लिए नहीं, बल्कि निर्णय लेने की पहली पंक्ति में युवा और महिलाएँ।</li>
+              <li><strong>समाधान की राजनीति</strong> — हर आलोचना के साथ ठोस विकल्प और व्यावहारिक road-map पेश करना।</li>
             </ul>
           </div>
         </div>
 
         <div>
           <div class="section-header">
-            <h2>Organisational Culture</h2>
+            <h2>संगठनात्मक संस्कृति</h2>
           </div>
           <div class="card">
             <h4>हम कैसी पार्टी बनना चाहते हैं?</h4>
             <ul class="timeline">
-              <li>जहाँ internal democracy हो — ticket और पद केवल “ऊपर से” तय न हों।</li>
-              <li>जहाँ volunteers को केवल poster-pasting नहीं, decision-making में भी जगह मिले।</li>
-              <li>जहाँ strategy rumours पर नहीं, data, research और survey पर बने।</li>
-              <li>जहाँ गलती स्वीकारना weakness नहीं, strength माना जाए।</li>
+              <li>जहाँ अंदरूनी लोकतंत्र हो — टिकट और पद केवल ऊपर से तय न हों, बल्कि प्रक्रिया और सुझाव से तय हों।</li>
+              <li>जहाँ स्वयंसेवकों को सिर्फ़ पोस्टर लगाने के लिए नहीं, बल्कि विचार-विमर्श और निर्णय में भी जगह मिले।</li>
+              <li>जहाँ रणनीति अफ़वाहों पर नहीं, बल्कि डेटा, शोध और ज़मीनी सर्वे पर बने।</li>
+              <li>जहाँ गलती मान लेना कमजोरी नहीं, बल्कि सीखने और सुधारने की ताकत माना जाए।</li>
             </ul>
           </div>
         </div>
