--- a/vision.html
+++ b/vision.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Vision — Uttarakhand Reform Party</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta name="description" content="URP's vision for transparent governance, anti-migration, better health, education and jobs in Uttarakhand.">
+  <meta name="description" content="URP का विज़न उत्तराखंड के लिए पारदर्शी शासन, पलायन रोकने, बेहतर स्वास्थ्य-शिक्षा और सम्मानजनक रोज़गार पर केंद्रित है।">
 
   <!-- SAME INLINE STYLE (match with Home & About) -->
   <style>
@@ -48,7 +48,7 @@
       align-items:center;
       gap:10px;
     }
-    /* ⬇️ नया logo image (पुरानी logo-mark हटाई गई) */
+    /* नया logo image (पुरानी logo-mark हटाई गई) */
     .logo-img{
       width:44px;
       height:44px;
@@ -221,11 +221,11 @@
     <!-- HERO -->
     <section class="hero">
       <div class="container">
-        <div class="hero-kicker">VISION • SHORT MANIFESTO</div>
+        <div class="hero-kicker">विजन • संक्षिप्त रूप</div>
         <h1 class="hero-title">URP का विज़न: सुरक्षित, सक्षम और सम्मानित उत्तराखंड</h1>
         <p class="hero-sub">
-          हमारा लक्ष्य केवल सरकार बदलना नहीं, बल्कि Governance की quality बदलना है।  
-          नारा simple है — <strong>“काम दिखे, data बोले, जनता decide करे।”</strong>
+          हमारा लक्ष्य केवल सरकार बदलना नहीं, बल्कि शासन की गुणवत्ता बदलना है।  
+          सीधी बात — <strong>“काम दिखे, आँकड़े साफ़ हों और जनता खुद निर्णय करे।”</strong>
         </p>
       </div>
     </section>
@@ -234,92 +234,92 @@
     <section class="section">
       <div class="container">
         <div class="section-header">
-          <h2>6–Pillar Vision (Short Document)</h2>
-          <p>पूरा detailed manifesto seat-wise survey के बाद आएगा। यह उसका संक्षिप्त framework है जो हर seat पर लागू होगा।</p>
+          <h2>6 आधार स्तंभ (संक्षिप्त दस्तावेज़)</h2>
+          <p>विस्तृत घोषणापत्र जनता से सीधी बातचीत और सर्वे के बाद तैयार किया जाएगा। यह उसका संक्षिप्त ढाँचा है।</p>
         </div>
 
         <div class="grid">
           <!-- Governance -->
           <div class="card">
-            <h3>1. Governance & Transparency</h3>
-            <p>“File से बाहर, public dashboard पर” — हर काम, हर खर्च, हर deadline जनता के सामने।</p>
+            <h3>1. शासन और पारदर्शिता</h3>
+            <p>“फाइल से बाहर, जनता की नज़र में” — हर काम, हर खर्च और हर समय-सीमा खुलकर लोगों के सामने।</p>
             <ul class="timeline">
-              <li>District-wise public portal: project name, लागत, contractor, status, फोटो, geo-tag।</li>
-              <li>Quarterly “जनता दरबार + report card” — केवल भाषण नहीं, data-based जवाब।</li>
+              <li>ज़िला-वार सार्वजनिक पोर्टल: योजना का नाम, लागत, ठेकेदार, स्थिति, तस्वीरें और स्थान-चिह्न।</li>
+              <li>हर तीन महीने में सार्वजनिक रिपोर्ट — सिर्फ़ भाषण नहीं, बल्कि आँकड़ों के साथ जवाबदेही।</li>
             </ul>
             <div class="tag-row">
-              <div class="tag">Live dashboards</div>
-              <div class="tag">Social audit</div>
+              <div class="tag">खुला डैशबोर्ड</div>
+              <div class="tag">जनता की निगरानी</div>
             </div>
           </div>
 
           <!-- Employment -->
           <div class="card">
-            <h3>2. रोजगार व युवा सशक्तिकरण</h3>
-            <p>“Earn from your district” — job पाने के लिए state से बाहर भागना compulsion न रहे।</p>
+            <h3>2. रोज़गार और युवा सशक्तिकरण</h3>
+            <p>“अपने ज़िले से ही कमाई” — नौकरी के लिए राज्य से बाहर भागना मजबूरी न रहे।</p>
             <ul class="timeline">
-              <li>हर जिले में multi-skill hub — IT, tourism, logistics, agro-processing, digital services।</li>
-              <li>Local job mapping portal — कौन सी company कहाँ hiring कर रही है, clear visibility।</li>
+              <li>हर ज़िले में बहु-कौशल केंद्र — आईटी, पर्यटन, लॉजिस्टिक्स, कृषि-प्रसंस्करण और डिजिटल सेवाएँ।</li>
+              <li>स्थानीय रोज़गार मानचित्र पोर्टल — कौन-सी कंपनी कहाँ भर्ती कर रही है, यह साफ़ दिखे।</li>
             </ul>
             <div class="tag-row">
-              <div class="tag">Skill hubs</div>
-              <div class="tag">District job portal</div>
+              <div class="tag">कौशल केंद्र</div>
+              <div class="tag">स्थानीय रोज़गार मानचित्र</div>
             </div>
           </div>
 
           <!-- Women -->
           <div class="card">
-            <h3>3. महिला सुरक्षा व अवसर</h3>
-            <p>सड़क, बाजार, स्कूल, workplace — हर जगह women-friendly infrastructure और behaviour change दोनों।</p>
+            <h3>3. महिला सुरक्षा और अवसर</h3>
+            <p>सड़क, बाज़ार, स्कूल, कार्यस्थल — हर जगह सुरक्षित माहौल और सम्मानजनक व्यवहार।</p>
             <ul class="timeline">
-              <li>Key शहरी इलाकों में well-lit streets, CCTV, women help-desk व dedicated rapid response teams।</li>
-              <li>महिला SHG को tourism, food, handicraft, services में stable income chains से जोड़ना।</li>
+              <li>मुख्य शहरी इलाकों में बेहतर रोशनी, CCTV, महिला सहायता-डेस्क और समर्पित त्वरित प्रतिक्रिया दल।</li>
+              <li>महिला स्वयं सहायता समूहों को पर्यटन, भोजन, हस्तशिल्प और सेवाओं से जुड़ी स्थायी आय-श्रृंखलाओं से जोड़ना।</li>
             </ul>
             <div class="tag-row">
-              <div class="tag">Safe cities</div>
-              <div class="tag">Women SHG economy</div>
+              <div class="tag">सुरक्षित शहर</div>
+              <div class="tag">महिला स्व-सहायता समूह</div>
             </div>
           </div>
 
           <!-- Health & Education -->
           <div class="card">
-            <h3>4. Health & Education Reset</h3>
-            <p>Hospital और school political photo-op के लिए नहीं, quality outcomes के लिए measure होंगे।</p>
+            <h3>4. स्वास्थ्य और शिक्षा में सुधार</h3>
+            <p>अस्पताल और स्कूल सिर्फ़ उद्घाटन के लिए नहीं, बल्कि वास्तविक गुणवत्ता के आधार पर आंके जाएँगे।</p>
             <ul class="timeline">
-              <li>District hospitals में 24×7 emergency + specialist rosters; tele-medicine से hill blocks cover।</li>
-              <li>Hill schools में teacher-posting audit; digital classrooms और local-language support।</li>
+              <li>ज़िला अस्पतालों में 24×7 आपातकालीन व्यवस्था और विशेषज्ञों की पाली; दूरदराज़ क्षेत्रों के लिए टेली-मेडिसिन।</li>
+              <li>पहाड़ी स्कूलों में शिक्षक-तैनाती की समीक्षा, डिजिटल कक्षाएँ और स्थानीय भाषा में पढ़ाई की मदद।</li>
             </ul>
             <div class="tag-row">
-              <div class="tag">Health audit</div>
-              <div class="tag">Teacher mapping</div>
+              <div class="tag">स्वास्थ्य समीक्षा</div>
+              <div class="tag">शिक्षक मानचित्रण</div>
             </div>
           </div>
 
           <!-- Migration -->
           <div class="card">
-            <h3>5. पलायन रोकना व गाँव पुनर्जीवन</h3>
-            <p>खाली गाँव सिर्फ़ nostalgia का विषय न रहें — उन्हें नए economic मॉडल से revive किया जाए।</p>
+            <h3>5. पलायन रोकना और गाँवों का पुनर्जीवन</h3>
+            <p>खाली होते गाँव केवल यादों का विषय न रहें — उन्हें नए आर्थिक मॉडल के साथ वापस जीवंत बनाना।</p>
             <ul class="timeline">
-              <li>“Adopt-a-village” मॉडल — youth, ex-servicemen और diaspora को village revival से जोड़ना।</li>
-              <li>Agro-tourism, homestay, off-beat campuses और mountain campuses जैसी योजनाएँ।</li>
+              <li>“गाँव अपनाओ” मॉडल — युवाओं, भूतपूर्व सैनिकों और प्रवासी उत्तराखंडियों को गाँवों के पुनर्जीवन से जोड़ना।</li>
+              <li>कृषि-पर्यटन, होमस्टे, अध्ययन-केंद्र और पहाड़ों पर आधारित छोटे कैंपस जैसी योजनाएँ।</li>
             </ul>
             <div class="tag-row">
-              <div class="tag">Anti-migration</div>
-              <div class="tag">Village revival</div>
+              <div class="tag">पलायन पर रोक</div>
+              <div class="tag">गाँवों को नया जीवन</div>
             </div>
           </div>
 
           <!-- Environment & Disaster -->
           <div class="card">
-            <h3>6. Environment & Disaster Preparedness</h3>
-            <p>उत्तराखंड का विकास नदी, पहाड़ और जंगल से जुड़ा है — इनको ignore करके कोई policy sustainable नहीं।</p>
+            <h3>6. पर्यावरण संरक्षण और आपदा तैयारियाँ</h3>
+            <p>उत्तराखंड का भविष्य नदियों, पहाड़ों और जंगलों से जुड़ा है — इन्हें नज़रअंदाज़ कर कोई नीति टिकाऊ नहीं हो सकती।</p>
             <ul class="timeline">
-              <li>Spring & river rejuvenation, landslide-prone zones की mapping और preventive works।</li>
-              <li>हर block में disaster-ready volunteer network और नियमित mock drills।</li>
+              <li>पानी के स्रोतों और नदियों का पुनर्जीवन, भूस्खलन-प्रवण क्षेत्रों की पहचान और रोकथाम के काम।</li>
+              <li>हर विकासखण्ड में आपदा-प्रशिक्षित स्वयंसेवक नेटवर्क और नियमित अभ्यास (मॉक ड्रिल)।</li>
             </ul>
             <div class="tag-row">
-              <div class="tag">Climate sensitive</div>
-              <div class="tag">Disaster ready</div>
+              <div class="tag">पर्यावरण-संवेदनशील विकास</div>
+              <div class="tag">तैयार आपदा-तंत्र</div>
             </div>
           </div>
         </div>
@@ -330,32 +330,32 @@
     <section class="section">
       <div class="container">
         <div class="section-header">
-          <h2>Vision से Policy तक — Process</h2>
-          <p>यह vision ऊपर से impose नहीं होगा; हर seat पर लोगों से बात करके इसे district-wise refine किया जाएगा।</p>
+          <h2>विजन से नीति तक — कैसी होगी प्रक्रिया?</h2>
+          <p>यह विज़न ऊपर से थोपा हुआ कागज़ी दस्तावेज़ नहीं होगा; हर क्षेत्र के लोगों से बात करके इसे ज़िला और विधानसभा स्तर पर बदला और सुधारा जाएगा।</p>
         </div>
         <div class="grid">
           <div class="card">
-            <h4>1. Seat-wise Surveys</h4>
+            <h4>1. विधानसभा-वार सर्वे</h4>
             <p class="small">
-              हर विधानसभा में structured survey — youth, महिलाएँ, किसान, small businesses, employees — सबकी प्राथमिकताएँ अलग से रिकॉर्ड होंगी।
+              हर विधानसभा क्षेत्र में संरचित सर्वे — युवाओं, महिलाओं, किसानों, छोटे कारोबारियों और कर्मचारियों की प्राथमिकताएँ अलग-अलग दर्ज की जाएँगी।
             </p>
           </div>
           <div class="card">
-            <h4>2. Policy Labs</h4>
+            <h4>2. नीति समूह (Policy Labs)</h4>
             <p class="small">
-              Volunteers + domain experts की छोटी-छोटी “policy labs” जहाँ health, education, tourism, environment पर workable drafts बनें।
+              स्वयंसेवकों और क्षेत्र विशेषज्ञों की छोटी-छोटी टीमें, जहाँ स्वास्थ्य, शिक्षा, पर्यटन, पर्यावरण आदि पर व्यवहारिक नीति-ड्राफ्ट तैयार हों।
             </p>
           </div>
           <div class="card">
-            <h4>3. Public Feedback Draft</h4>
+            <h4>3. सार्वजनिक मसौदा और सुझाव</h4>
             <p class="small">
-              Manifesto को final मानने से पहले public domain में रखकर feedback लिया जाएगा — online और ground दोनों पर।
+              घोषणापत्र का प्रारम्भिक मसौदा सार्वजनिक किया जाएगा, ताकि लोग ऑनलाइन और ज़मीन पर दोनों स्तरों पर अपना सुझाव दे सकें।
             </p>
           </div>
           <div class="card">
-            <h4>4. Measurable 100-day & 5-year goals</h4>
+            <h4>4. मापने योग्य लक्ष्य</h4>
             <p class="small">
-              हर sector के लिए 100-day, 2-year और 5-year targets — जिनका public yearly report card बने।
+              हर क्षेत्र के लिए 100 दिन, 2 साल और 5 साल के स्पष्ट लक्ष्य तय किए जाएँगे, जिनकी प्रगति पर हर साल सार्वजनिक रिपोर्ट जारी होगी।
             </p>
           </div>
         </div>
@@ -368,7 +368,7 @@
     <div class="container footer-grid">
       <div>
         <div>© 2025 Uttarakhand Reform Party</div>
-        <div class="small">Reform-focused political platform for Uttarakhand.</div>
+        <div class="small">उत्तराखंड के लिए सुधार-केंद्रित राजनीतिक मंच।</div>
       </div>
       <div class="small">
         <div>Contact: contact@uttarakhandreform.org</div>
