--- a/join.html
+++ b/join.html
@@ -2,9 +2,9 @@
 <html lang="hi">
 <head>
   <meta charset="utf-8">
-  <title>Join URP — Uttarakhand Reform Party</title>
+  <title>URP से जुड़ें — Uttarakhand Reform Party</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta name="description" content="Join Uttarakhand Reform Party (URP) as a volunteer, member or local organiser.">
+  <meta name="description" content="Uttarakhand Reform Party (URP) से सदस्य, स्वयंसेवक या स्थानीय आयोजक के रूप में जुड़ें। प्रक्रिया सरल, डिजिटल और पारदर्शी है।">
 
   <style>
     :root{
@@ -47,7 +47,7 @@
       align-items:center;
       gap:10px;
     }
-    /* ⬇️ नया logo image (पुराना .logo-mark हटा दिया गया) */
+    /* नया logo image (पुराना .logo-mark हटा दिया गया) */
     .logo-img{
       width:44px;
       height:44px;
@@ -194,7 +194,7 @@
   <header class="header">
     <div class="container nav">
       <div class="logo-wrap">
-        <!-- ⬇️ नया logo यहां -->
+        <!-- नया logo यहां -->
         <img src="logo%20urp.png" alt="URP logo" class="logo-img">
         <div class="brand-title">Uttarakhand Reform Party</div>
       </div>
@@ -213,11 +213,12 @@
     <!-- HERO -->
     <section class="hero">
       <div class="container">
-        <div class="hero-kicker">JOIN • MEMBERSHIP & VOLUNTEERS</div>
+        <div class="hero-kicker">जॉइन • सदस्यता और स्वयंसेवक</div>
         <h1 class="hero-title">URP से जुड़ें — बदलाव की राजनीति में अपना योगदान दें</h1>
         <p class="hero-sub">
-          URP में membership simple, digital और transparent है। कोई hidden form या closed group नहीं —
-          हर जागरूक नागरिक, भूतपूर्व सैनिक, youth, महिला और professional का स्वागत है।
+          Uttarakhand Reform Party में सदस्यता की प्रक्रिया सरल, डिजिटल और पारदर्शी है। 
+          कोई छुपा हुआ फ़ॉर्म या बंद समूह नहीं — हर जागरूक नागरिक, भूतपूर्व सैनिक, युवा, 
+          महिला और पेशेवर का स्वागत है।
         </p>
       </div>
     </section>
@@ -228,25 +229,25 @@
         <!-- LEFT: STEPS -->
         <div>
           <div class="card">
-            <h3>सदस्यता लेने के 4 आसान स्टेप</h3>
+            <h3>सदस्यता लेने के 4 आसान चरण</h3>
             <ul class="timeline">
-              <li><strong>Form भरें:</strong> नीचे दिया गया Google Form पूरा भरें — नाम, mobile, EPIC, जिला/विधानसभा आदि।</li>
-              <li><strong>Verification:</strong> District / Assembly coordinator 7–10 दिन के भीतर आपसे call / WhatsApp पर संपर्क करेगा।</li>
-              <li><strong>Role तय करें:</strong> आप volunteer, booth-level, ward-level या digital टीम में कैसे contribute करना चाहते हैं, यह तय होगा।</li>
-              <li><strong>Team में शामिल:</strong> आपको official WhatsApp / email चैनल से जोड़ा जाएगा और local meetings / training की जानकारी दी जाएगी।</li>
+              <li><strong>ऑनलाइन फ़ॉर्म भरें:</strong> नीचे दिया गया Google फ़ॉर्म भरें — नाम, मोबाइल, EPIC, ज़िला/विधानसभा आदि।</li>
+              <li><strong>सत्यापन (Verification):</strong> ज़िला / विधानसभा समन्वयक 7–10 दिन के भीतर आपसे कॉल या WhatsApp के ज़रिए संपर्क करेगा।</li>
+              <li><strong>भूमिका तय करें:</strong> आप स्वयंसेवक, बूथ-स्तर, वार्ड-स्तर या डिजिटल टीम में कैसे योगदान देना चाहते हैं, यह मिलकर तय होगा।</li>
+              <li><strong>टीम में औपचारिक रूप से शामिल:</strong> आपको आधिकारिक WhatsApp / ईमेल समूह से जोड़ा जाएगा और बैठक व प्रशिक्षण की जानकारी दी जाएगी।</li>
             </ul>
             <div class="badge-row">
-              <div class="badge">No joining fee अभी</div>
-              <div class="badge">Digital record & ID</div>
-              <div class="badge">Seat-wise volunteer network</div>
+              <div class="badge">अभी कोई सदस्यता शुल्क नहीं</div>
+              <div class="badge">डिजिटल रिकॉर्ड और आईडी</div>
+              <div class="badge">विधानसभा-वार स्वयंसेवक नेटवर्क</div>
             </div>
           </div>
 
           <div class="card" style="margin-top:14px;">
             <h4>कौन-कौन जुड़ सकता है?</h4>
             <ul class="timeline">
-              <li>18+ वर्ष, उत्तराखंड से संबंध (निवासी / voter / origin)।</li>
-              <li>किसी भी धर्म, जाति, क्षेत्र से — कोई discrimination नहीं।</li>
+              <li>18 वर्ष या उससे अधिक आयु, और उत्तराखंड से संबंध (निवासी / मतदाता / मूल निवासी)।</li>
+              <li>किसी भी धर्म, जाति, क्षेत्र या भाषा से — बिना किसी भेदभाव के।</li>
               <li>किसी गंभीर आपराधिक मामले में दोषी न हों।</li>
             </ul>
           </div>
@@ -255,22 +256,23 @@
         <!-- RIGHT: GOOGLE FORM -->
         <div>
           <p class="small" style="margin-bottom:8px;">
-            नीचे membership form सीधे Google Forms से जुड़ा है — आपके data की entry real-time Google Sheet में जाएगी।
+            नीचे दिया गया सदस्यता फ़ॉर्म सीधे Google Forms से जुड़ा है — आपकी जानकारी सुरक्षित रूप से 
+            सीधे Google Sheet में दर्ज होगी।
           </p>
           <iframe 
             src="https://docs.google.com/forms/d/e/1FAIpQLSeIXaDJojCZDJYDThfXSX-bIx3CozwdTyEp2hXWzdptEozBZg/viewform?embedded=true"
             height="950"
             loading="lazy">
-            Loading…
+            लोड हो रहा है…
           </iframe>
           <p class="small" style="margin-top:6px;">
-            अगर form दिखाई न दे, तो 
+            अगर फ़ॉर्म दिखाई न दे, तो 
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSeIXaDJojCZDJYDThfXSX-bIx3CozwdTyEp2hXWzdptEozBZg/viewform?usp=sf_link" 
                target="_blank" 
                style="color:var(--primary-soft);font-weight:600;">
-              इस सीधा लिंक
+              इस सीधे लिंक
             </a> 
-            पर क्लिक करके form भर सकते हैं।
+            पर क्लिक करके फ़ॉर्म भर सकते हैं।
           </p>
         </div>
       </div>
@@ -282,14 +284,14 @@
     <div class="container footer-grid">
       <div>
         <div>© 2025 Uttarakhand Reform Party</div>
-        <div class="small">Reform-focused political platform for Uttarakhand.</div>
+        <div class="small">उत्तराखंड के लिए सुधार-केंद्रित राजनीतिक मंच।</div>
       </div>
       <div class="small">
         <div>Contact: contact@uttarakhandreform.org</div>
         <div>Phone: +91 98765 43210</div>
       </div>
       <div class="small">
-        <div><a href="candidates.html">Apply as Candidate</a></div>
+        <div><a href="candidates.html">उम्मीदवार के रूप में आवेदन करें</a></div>
       </div>
     </div>
   </footer>
